# local-selfhosted-gitlab

./: .gitignore  .gitlab-ci.yml  Makefile  Procfile.dev  README.md  docker-compose.yml
.github/workflows/: mirror-checks.yml
app/backend/: Dockerfile  pyproject.toml  requirements.txt
app/backend/src/: auth.py  main.py  metrics.py  payments.py  severity.py  worker.py
app/backend/tests/: test_health.py  test_payments.py  test_security.py  test_severity.py
app/frontend/: package-lock.json  package.json
docs/: architecture.md  backup-restore-runbook.md  ci-cd-pipeline.md  helm-release-process.md  incident-runbook.md  kubernetes-local.md  observability.md  pulumi-local.md  resume-bullets.md  security-scanning.md  setup-gitlab-local.md  setup-local.md  setup-runner-local.md  terraform-local.md
gitlab/: docker-compose.gitlab.yml  gitlab.rb.example
gitlab/backup/: backup-gitlab.sh  restore-gitlab.sh
gitlab/runner/: config.toml.example  register-runner.ps1  register-runner.sh
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
observability/: docker-compose.observability.yml
scripts/: build-image.ps1  build-image.sh  check-prereqs.ps1  check-prereqs.sh  clean-local.ps1  clean-local.sh  create-kind-cluster.ps1  create-kind-cluster.sh  deploy-helm.ps1  deploy-helm.sh  deploy-k8s.ps1  deploy-k8s.sh  destroy-kind-cluster.ps1  destroy-kind-cluster.sh  local-dev.ps1  local-dev.sh  platform-up.ps1  test-all.ps1  test-all.sh
security/: api_exposure_check.py  gitleaks.toml  trivy-config.yaml
(+29 files in other folders)
